<resources>
    <string name="app_name">InstantFuel</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_history">History</string>
    <string name="nav_account">Account</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_map">Map</string>
    <string name="join_team">Wanna join our team?</string>
    <string name="twitterUsername">\@joeytribbiani</string>
    <string name="update_profile">Update Profile</string>

</resources>