<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/nav_account"
        android:title="@string/nav_account"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_account_circle_24"
        />

    <item
        android:id="@+id/nav_history"
        android:title="@string/nav_history"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_history_24"
        />

    <item
        android:id="@+id/nav_map"
        android:title="@string/nav_map"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_location_on_24"
        />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_west_24"
        />

    <item
        android:id="@+id/joinTeam"
        android:title="@string/join_team"
        android:orderInCategory="100"
        android:text="Wanna join our team?"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:icon="@drawable/ic_baseline_people_outline_24"
        />

</menu>
